Enhancements for MVP

--- a/web/web-app/src/app/pages/admin/court-schedules/court-schedules.component.html
+++ b/web/web-app/src/app/pages/admin/court-schedules/court-schedules.component.html
@@ -45,7 +45,7 @@
     <div class="table-container">
       <p-table [value]="courtSchedules" [paginator]="true" [rows]="rows" [totalRecords]="totalRecords"
         [lazy]="false" [showCurrentPageReport]="true" currentPageReportTemplate="Showing {first} to {last} of {totalRecords} schedules"
-        [rowsPerPageOptions]="[10, 25, 50]" class="p-datatable-sm">
+        [rowsPerPageOptions]="[10, 25, 50]" size="small">
         
         <ng-template pTemplate="header">
           <tr>
