--- a/web/web-app/src/app/pages/dashboard/components/upcomingtournamentswidget.html
+++ b/web/web-app/src/app/pages/dashboard/components/upcomingtournamentswidget.html
@@ -53,7 +53,7 @@
             </div>
             <ng-template pTemplate="footer">
               <div class="tournament-footer">
-                    <p-button label="Enter now" [routerLink]="['/player/tournaments']" styleClass="p-button-outlined" severity="secondary" [disabled]="true"></p-button>
+                    <p-button label="Enter now" [routerLink]="['/player/tournaments']" [disabled]="true"></p-button>
               </div>
             </ng-template>
           </p-card>
