--- a/web/web-app/src/app/pages/player/court-booking/court-booking.component.scss
+++ b/web/web-app/src/app/pages/player/court-booking/court-booking.component.scss
@@ -225,8 +225,9 @@
 }
 
 .booking-status-badge {
-  font-size: 1rem !important;
+  font-size: 1.125rem !important;
   font-weight: semibold;
+  color: #374151 !important; /* text-gray-700 equivalent */
 }
 
 // Button adjustments
