--- a/web/web-app/src/app/pages/tournaments/components/standings/standings.component.html
+++ b/web/web-app/src/app/pages/tournaments/components/standings/standings.component.html
@@ -72,7 +72,7 @@
                 </div>
                 <!-- Standings Table -->
                 <div class="overflow-x-auto">
-                                    <p-table [value]="groupStanding.standings" [dataKey]="'team.id'" class="p-datatable-sm">
+                                    <p-table [value]="groupStanding.standings" [dataKey]="'team.id'" size="small">
                         <ng-template pTemplate="header">
                             <tr>
                                 <th class="text-center w-16">Pos</th>
