--- a/web/web-app/src/app/pages/tournaments/components/tournament-knockout-matches/tournament-knockout-matches.component.html
+++ b/web/web-app/src/app/pages/tournaments/components/tournament-knockout-matches/tournament-knockout-matches.component.html
@@ -131,7 +131,7 @@
             <p-table [value]="getFilteredMatches()" 
                     [dataKey]="'id'"
                     [tableStyle]="{'min-width': '50rem'}"
-                    styleClass="p-datatable-sm"
+                    size="small"
                     [rowHover]="true"
                     (onRowClick)="startEditMatch($event)">
                 
