--- a/web/web-app/src/app/pages/tournaments/components/tournament-participants/tournament-participants.component.html
+++ b/web/web-app/src/app/pages/tournaments/components/tournament-participants/tournament-participants.component.html
@@ -65,10 +65,9 @@
                              [paginator]="true" 
                              [rows]="10"
                              [showCurrentPageReport]="true"
-                             responsiveLayout="scroll"
                              currentPageReportTemplate="Showing {first} to {last} of {totalRecords} participants"
                              [rowsPerPageOptions]="[5, 10, 25, 50]"
-                             styleClass="p-datatable-sm">
+                             size="small">
                         
                         <ng-template pTemplate="header">
                             <tr>
