--- a/web/web-app/src/app/pages/tournaments/components/tournament-standings/tournament-standings.component.html
+++ b/web/web-app/src/app/pages/tournaments/components/tournament-standings/tournament-standings.component.html
@@ -71,7 +71,7 @@
                 [value]="getStandingsForGroup(group.id!)" 
                 [dataKey]="'teamId'"
                 [tableStyle]="{ 'min-width': '50rem' }"
-                class="p-datatable-sm">
+                size="small">
                 
                 <ng-template pTemplate="header">
                     <tr>
