Enhancements for MVP

--- a/web/web-app/src/app/pages/player/dashboard/components/upcomingtournamentswidget.html
+++ b/web/web-app/src/app/pages/player/dashboard/components/upcomingtournamentswidget.html
@@ -47,7 +47,7 @@
               @if (tournament.entryFee && tournament.entryFee > 0) {
                 <div class="tournament-info-item">
                   <i class="pi pi-money-bill text-orange-500 mr-2"></i>
-                  <span>Entry: ${{ tournament.entryFee }}</span>
+                  <span>Entry: R{{ tournament.entryFee }}</span>
                 </div>
               }
             </div>
